--- a/TT2024-A155/Properties/Resources.resx
+++ b/TT2024-A155/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="logoAppTransMovimiento" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoAppTransMovimiento.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logoAppTransMovimiento-Blanco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoAppTransMovimiento-Blanco.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Pregunta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Pregunta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
