--- a/TT2024-A155/Properties/Resources.resx
+++ b/TT2024-A155/Properties/Resources.resx
@@ -151,6 +151,12 @@
   <data name="logoAppTransMovimiento-Blanco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoAppTransMovimiento-Blanco.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ojo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ojo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OjoCerrado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OjoCerrado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Pregunta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Pregunta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
