--- a/TT2024-A155/Factura.resx
+++ b/TT2024-A155/Factura.resx
@@ -3031,4 +3031,7 @@
   <metadata name="errorLlavePrivada.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>912, 17</value>
   </metadata>
+  <metadata name="errorContraLlavePriv.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1087, 17</value>
+  </metadata>
 </root>
