--- a/TT2024-A155/Properties/Resources.resx
+++ b/TT2024-A155/Properties/Resources.resx
@@ -154,6 +154,9 @@
   <data name="logoAppTransMovimiento-Blanco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoAppTransMovimiento-Blanco.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logoEscomGifApp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoEscomGifApp.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ojo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ojo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
